--- a/Singularity.4.0.2
+++ b/Singularity.4.0.2
@@ -21,7 +21,11 @@ From: x11vnc/desktop:master
   # Get dependencies
   apt-get update
   apt-get install -y --no-install-recommends \
-    locales
+    apt-utils \
+    locales \
+    gnupg2 \
+    dirmngr
+
 
   # Configure default locale
   echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen
@@ -52,6 +56,7 @@ From: x11vnc/desktop:master
     libjpeg-dev \
     libgsl-dev \
     software-properties-common
+
 
   # Add a default CRAN mirror
   echo "options(repos = c(CRAN = 'https://cran.rstudio.com/'), download.file.method = 'libcurl')" >> /usr/lib/R/etc/Rprofile.site
