--- a/Singularity.4.0.2
+++ b/Singularity.4.0.2
@@ -34,7 +34,7 @@ From: saviodot/x11vnc-desktop:latest
   export LC_ALL=en_US.UTF-8
   export LANG=en_US.UTF-8
 
-  # Install R
+  # Install R version
   echo "deb http://cran.r-project.org/bin/linux/ubuntu bionic-cran40/" > /etc/apt/sources.list.d/r.list
   apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9
   apt-get update
